--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,147 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;900&display=swap");
+
+html {
+  font-family: "Roboto", sans-serif;
+}
+
+.image-crop {
+  clip-path: ellipse(66% 133% at 31% 24%);
+}
+
+.card__image-crop {
+  clip-path: ellipse(93% 69% at 33% 31%);
+}
+
+.max-h-50 {
+  max-height: 50%;
+}
+
+.max-w-20 {
+  max-width: 20%;
+}
+
+.max-w-100 {
+  max-width: 100%;
+}
+
+.max-h-100 {
+  max-height: 100%;
+}
+
+.px-20p {
+  padding-left: 20%;
+  padding-right: 20%;
+}
+
+.py-10p {
+  padding-top: 5%;
+  padding-bottom: 5%;
+}
+
+.card__title-copy {
+  font-size: 3vw;
+  letter-spacing: -0.02em;
+  line-height: 2.5vh;
+}
+
+.card__copy {
+  font-size: 1.9vw;
+  letter-spacing: -0.02em;
+  line-height: 2vh;
+}
+
+.badge__copy {
+  font-size: 1.7vw;
+  letter-spacing: 0.05em;
+  line-height: 2vh;
+}
+
+.card__title-line-clamp {
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+}
+
+.card__copy-line-clamp {
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+}
+
+.card__footer-border {
+  border-top: 1px solid #f3f7fb;
+}
+
+@media screen and (min-width: 640px) {
+  .card__title-copy {
+    font-size: 2.5vw;
+    line-height: 2.75vh;
+  }
+
+  .card__copy {
+    font-size: 1.7vw;
+    line-height: 2.2vh;
+  }
+
+  .badge__copy {
+    font-size: 1.6vw;
+    letter-spacing: 0.05em;
+    line-height: 1.5vh;
+  }
+}
+
+@media screen and (min-width: 760px) {
+  .card__title-copy {
+    font-size: 1.4vw;
+    line-height: 1.9vh;
+  }
+
+  .card__copy {
+    font-size: 1vw;
+    line-height: 1.7vh;
+  }
+
+  .badge__copy {
+    font-size: 1.2vw;
+    letter-spacing: 0.05em;
+    line-height: 1.3vh;
+  }
+}
+
+@media screen and (min-width: 960px) {
+  .card__title-copy {
+    font-size: 1.6vw;
+    line-height: 1.27rem;
+  }
+
+  .card__copy {
+    font-size: 0.9vw;
+    line-height: 2vh;
+  }
+
+  .badge__copy {
+    font-size: 1.3vw;
+    line-height: 1.5vh;
+  }
+}
+
+@media screen and (min-width: 1048px) {
+  .card__title-copy {
+    font-size: 1.55vw;
+    line-height: 1.25rem;
+  }
+
+  .card__copy {
+    font-size: 0.9vw;
+    line-height: 2.4vh;
+  }
+
+  .badge__copy {
+    font-size: 1.1vw;
+    line-height: 1.5vh;
+  }
+}
